<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogicaActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TableLayout
        android:id="@+id/mainTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="125dp"
        android:stretchColumns="*"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/exampleFieldQ1"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/exampleFieldQ1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exampleFieldQ2"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/exampleFieldQ2"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exampleFieldAnswer"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/answerField1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/questionField1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionField1"
                android:textAlignment="center"
                android:maxLength="1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/questionField2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionField2"
                android:textAlignment="center"
                android:maxLength="1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/answerField1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:inputType="textPersonName"
                android:maxLength="1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/questionField3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionField3"
                android:textAlignment="center"
                android:maxLength="1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/questionField4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionField4"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/answerField2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:backgroundTint="@android:color/holo_red_dark"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/questionField5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionField5"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/questionField6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:text="@string/questionField6"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/answerField3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:backgroundTint="@android:color/holo_red_dark"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/questionField7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionField8"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/questionField8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:text="@string/questionField9"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/answerField4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="1"
                android:backgroundTint="@android:color/holo_red_dark"
                android:inputType="textPersonName"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/submitButton"
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/submitButton" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>